--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -5,7 +5,12 @@ SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen
 	ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c \
 	ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
 	ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+
+BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
+	ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+
 OBJS = $(SRC:%.c=%.o)
+BONUS_OBSJ = $(BONUS:%.c=%.o)
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
@@ -15,18 +20,21 @@ RM = rm -f
 
 all: $(NAME)
 
+bonus: $(OBJS) $(BONUS_OBSJ)
+	$(ARNAME) $(OBJS) $(BONUS_OBSJ)
+
 $(NAME): $(OBJS)
-	$(ARNAME) $(OBJS)
+	$(ARNAME) $^
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
 
 clean:
-	$(RM) $(OBJS)
+	$(RM) $(OBJS) $(BONUS_OBSJ)
 
 fclean: clean
 	$(RM) $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re bonus
